docs: add swagger documentation for post class request route
