# src/controllers/classRequest.ts
@@ -14,19 +14,57 @@ export async function createClassRequestController(
   req: Request,
   res: Response,
 ): Promise<void> {
+  /*
+    #swagger.tags = ['ClassRequest']
+    #swagger.summary = 'Create a new class request'
+    #swagger.description = 'This endpoint will create a new class request for a given profile schedule and update the profile schedule status to UNAVAILABLE.'
+  */
   console.info(
     '[createClassRequestController] Called createClassRequestController',
   )
   try {
+    /*  #swagger.requestBody = {
+        required: true,
+        content: {
+          "application/json": {
+            schema: {
+                $ref: "#/components/schemas/createClassRequestBody"
+            }  
+          }
+        }
+      } 
+    */
     const input = req.body as CreateClassRequestRequest
     const profile = await fetchProfileById(input.studentProfileId)
 
     if (!profile) {
+      /*  #swagger.responses[404] = {
+        description: "Profile not found",
+        content: {
+          "application/json": {
+            schema:{
+                $ref: "#/components/schemas/createClassRequestProfileNotFoundResponse"
+            }
+          }           
+        }
+      }   
+    */
       res.status(404).json({ message: 'Profile not found' })
       return
     }
 
     if (profile?.role !== ProfileRole.STUDENT) {
+      /*  #swagger.responses[403] = {
+        description: "Profile is not a STUDENT profile",
+        content: {
+          "application/json": {
+            schema:{
+                $ref: "#/components/schemas/createClassRequestNotStudentProfileResponse"
+            }
+          }           
+        }
+      }   
+    */
       res.status(403).json({ message: 'Profile must have STUDENT role' })
       return
     }
@@ -55,12 +93,34 @@ export async function createClassRequestController(
       )
     }
 
-    res.status(200).json({
+    /*  #swagger.responses[201] = {
+        description: "Successfully created a class request",
+        content: {
+          "application/json": {
+            schema:{
+                $ref: "#/components/schemas/createClassRequestSuccessfulResponse"
+            }
+          }           
+        }
+      }   
+    */
+    res.status(201).json({
       message: 'Class Request',
       data: classRequest[0],
     })
   } catch (err) {
     console.error('[createClassRequestController] Error:', err)
+    /*  #swagger.responses[500] = {
+        description: "Could not create class request",
+        content: {
+          "application/json": {
+            schema:{
+                $ref: "#/components/schemas/createClassRequestInternalServerErrorResponse"
+            }
+          }           
+        }
+      }   
+    */
     res.status(500).json({ message: 'Could not create class request' })
   }
 }
